--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --color-principal:#ffffff;
-    --color-secundario:#d9478a;
-    --color-terciario:#d9478a;
+    --color-secundario:#f1b3c4;
+    --color-terciario:#f1b3c4;
     --font-principal:'Schoolbell', cursive;
     --font-secundaria:'Nunito Sans', sans-serif;
 }
@@ -84,7 +84,7 @@ header .header-info {
     justify-content: center;
     text-align: center;
     gap: -3px;
-    padding-top: 80px;
+    padding-top: 360px;
 }
 .infoimportante a {
     margin: 0px 0 0 0;
