--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ header .header-info {
     justify-content: center;
     text-align: center;
     gap: -3px;
-    padding-top: 320px;
+    padding-top: 300px;
 }
 .infoimportante a {
     margin: 0px 0 0 0;
@@ -195,9 +195,9 @@ audio::-webkit-media-controls-current-time-display {
     border-radius: 50px;
  }
  .boton2:hover {
-     color: var(--color-terciario);
+     color: var(--color-principal);
      background-color: transparent;
-     border: 1px solid var(--color-terciario);
+     border: 1px solid var(--color-principal);
      padding: 10px 30PX;
      text-align: center;
      text-decoration: none;
